[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/player_hud/player_hud.gd" type="Script" id=1]
[ext_resource path="res://player/player_hud/heart_off.png" type="Texture" id=2]
[ext_resource path="res://player/player_hud/heart_on.png" type="Texture" id=3]
[ext_resource path="res://player/player_hud/meter_bg.png" type="Texture" id=4]
[ext_resource path="res://player/player_hud/meter_fill.png" type="Texture" id=5]
[ext_resource path="res://player/player_hud/weapon_icons/dagger_ic.png" type="Texture" id=6]
[ext_resource path="res://player/player_hud/selected_highlight.png" type="Texture" id=7]

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HUD"]
margin_left = 3.0
margin_top = 71.0
margin_right = 45.0
margin_bottom = 85.0
text = "Health"

[node name="Meter" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -632.0
margin_top = 89.0
margin_right = -592.0
margin_bottom = 103.0
text = "Meter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LostHearts" type="TextureRect" parent="HUD"]
margin_left = 30.0
margin_top = 11.0
margin_right = 78.0
margin_bottom = 27.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrHearts" type="TextureRect" parent="HUD"]
margin_left = 30.0
margin_top = 11.0
margin_right = 78.0
margin_bottom = 27.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeterBG" type="TextureRect" parent="HUD"]
margin_left = 9.0
margin_top = 58.0
margin_right = 57.0
margin_bottom = 74.0
rect_rotation = -90.0
texture = ExtResource( 4 )

[node name="MeterFill" type="TextureRect" parent="HUD"]
margin_left = 10.0
margin_top = 57.0
margin_right = 56.0
margin_bottom = 71.0
rect_rotation = -90.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrimaryWeapon" type="TextureRect" parent="HUD"]
margin_left = 28.0
margin_top = 32.0
margin_right = 54.0
margin_bottom = 58.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="HUD/PrimaryWeapon"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 7 )

[node name="SecondaryWeapon" type="TextureRect" parent="HUD"]
margin_left = 54.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 58.0
texture = ExtResource( 6 )

[node name="Selected" type="TextureRect" parent="HUD/SecondaryWeapon"]
visible = false
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 7 )
